--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b559e541",
+   "id": "b9a2cfcf",
    "metadata": {},
    "source": [
     "Postprocessing with atooms\n",
@@ -18,47 +18,63 @@
     "Setup\n",
     "-----\n",
     "\n",
-    "We start with a few imports. We will read a trajectory file in XYZ\n",
-    "format, so we also load the `TrajectoryXYZ` class from `atooms`.\n"
+    "We start with a few imports and plot customizations. We will read a\n",
+    "trajectory file in XYZ format, so we also load the `TrajectoryXYZ` class\n",
+    "from `atooms`.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38ae782d",
+   "id": "3c21bbbc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib\n",
     "import matplotlib.pyplot as pl\n",
     "import atooms.postprocessing as pp\n",
-    "from atooms.trajectory import TrajectoryXYZ "
+    "from atooms.trajectory import TrajectoryXYZ \n",
+    "\n",
+    "pl.rcParams.update({\n",
+    "    \"font.family\": \"serif\",\n",
+    "    'font.size': 11.0,\n",
+    "    'axes.labelsize': 'medium',\n",
+    "    'xtick.major.pad': 2.0,\n",
+    "    'ytick.major.pad': 2.0,\n",
+    "    'xtick.major.size': 4.0,\n",
+    "    'ytick.major.size': 4.0,\n",
+    "    'savefig.bbox': 'tight',\n",
+    "    'savefig.dpi': 180,\n",
+    "    'axes.spines.right': False,\n",
+    "    'axes.spines.top': False,\n",
+    "    'legend.frameon': False,\n",
+    "})"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6404b7ac",
+   "id": "af3078bf",
    "metadata": {},
    "source": [
     "We consider a sample trajectory, which can be downloaded from the\n",
-    "package repository. Let\\'s store the path to this file in a variable for\n",
-    "later convenience\n"
+    "package repository.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acf23915",
+   "id": "fa178884",
    "metadata": {},
    "outputs": [],
    "source": [
     "from atooms.core.utils import download\n",
-    "download('https://framagit.org/atooms/postprocessing/raw/master/data/kalj-small.xyz', \"/tmp\")\n",
-    "path = '/tmp/kalj-small.xyz'"
+    "download('https://framagit.org/atooms/postprocessing/raw/master/data/kalj.xyz', \"/tmp\")\n",
+    "path = '/tmp/kalj.xyz'"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "225eed7a",
+   "id": "7afe7d9c",
    "metadata": {},
    "source": [
     "### Handling a trajectory\n",
@@ -70,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a3498be",
+   "id": "16218377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e9e1e06",
+   "id": "37e29a35",
    "metadata": {},
    "source": [
     "The trajectory is a list-like object, in the sense that it can be\n",
@@ -91,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3cc3c76",
+   "id": "affe6323",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46a70913",
+   "id": "df1cd056",
    "metadata": {},
    "source": [
     "To know how many frames we have\n"
@@ -109,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3cc34bf",
+   "id": "306958c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f85a94e",
+   "id": "3e1e46b8",
    "metadata": {},
    "source": [
     "To clarify: a slice like `th[10: 12]` is a list of frames, not a\n",
@@ -131,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d5f83fc",
+   "id": "4459c73e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e05dd10",
+   "id": "ee580fb6",
    "metadata": {},
    "source": [
     "Analysis of the trajectory\n",
@@ -182,23 +198,27 @@
     "    `Correlation` object that takes a trajectory as input. In order to\n",
     "    compute the correlation function, we construct the object,\n",
     "    specifying some parameters, and then run the calculation with the\n",
-    "    `compute()` method\n"
+    "    `compute()` method.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cef8c617",
+   "id": "d3bd7a08",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gr = pp.RadialDistributionFunction(th, dr=0.02)\n",
-    "gr.compute()"
+    "# We let postprocessing choose a reasonable number of time origins for the average\n",
+    "gr = pp.RadialDistributionFunction(th, dr=0.03)\n",
+    "gr.compute()\n",
+    "# We average over all the frames\n",
+    "gr_all = pp.RadialDistributionFunction(th, dr=0.03, norigins=len(th))\n",
+    "gr_all.compute()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9f7f05bd",
+   "id": "28d51111",
    "metadata": {},
    "source": [
     "Once the calculation is performed, the radial distribution object `gr`\n",
@@ -210,24 +230,26 @@
     "-   the `value` array contains the actual value of the computation, in\n",
     "    this case the values of $g(r)$\n",
     "\n",
-    "We can directly plot the results with\n"
+    "As you can see there is very little improvement when using the full\n",
+    "trajectory.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5d867d7",
+   "id": "58340389",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pl.plot(gr.grid, gr.value)\n",
+    "pl.plot(gr.grid, gr.value, label='Default')\n",
+    "pl.plot(gr_all.grid, gr_all.value, label='All time origins')\n",
     "pl.xlabel(\"r\")\n",
     "pl.ylabel(\"g(r)\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11de7af3",
+   "id": "763de111",
    "metadata": {},
    "source": [
     "![](gr.png)\n",
@@ -240,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d040d39a",
+   "id": "61a65839",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e76d4e24",
+   "id": "5ca5e7c7",
    "metadata": {},
    "source": [
     "As we can see, the correlation function displays two narrow peaks around\n",
@@ -266,18 +288,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "057e3034",
+   "id": "1881a764",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gr = pp.Partial(pp.RadialDistributionFunction, species=['A', 'B'], trajectory=th, dr=0.02)\n",
-    "gr.partial[('B', 'B')].dr = 0.05\n",
+    "gr = pp.Partial(pp.RadialDistributionFunction, species=['A', 'B'], trajectory=th, dr=0.03, norigins=len(th))\n",
+    "gr.partial[('B', 'B')].dr = 0.06\n",
     "gr.compute() "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bf76ceb4",
+   "id": "c503a090",
    "metadata": {},
    "source": [
     "Note how we modified the bin width `dr` for the $B$-$B$ correlations to\n",
@@ -289,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d0564d3",
+   "id": "0e8aef84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c801b0c4",
+   "id": "09c8b80b",
    "metadata": {},
    "source": [
     "We plot all correlation functions\n"
@@ -308,20 +330,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cada94df",
+   "id": "31ebfba8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for key,g in gr.partial.items(): \n",
+    "for key,g in gr.partial.items():\n",
     "    pl.plot(g.grid, g.value, label=str(\"\".join(key)))\n",
     "pl.legend()\n",
-    "pl.xlabel(\"r\")\n",
+    "pl.xlabel(\"$r$\")\n",
     "pl.ylabel(r\"$g_{\\alpha\\beta}(r)$\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e3a10a32",
+   "id": "04e04bb0",
    "metadata": {},
    "source": [
     "![](gr_ab.png)\n",
@@ -334,13 +356,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7de9884a",
+   "id": "d7c065a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "from atooms import trajectory\n",
     "t =  trajectory.Sliced(th, slice(len(th)//2, len(th)))  # analyse only the 2nd half\n",
-    "gr = pp.RadialDistributionFunction(t, dr=0.02)\n",
+    "gr = pp.RadialDistributionFunction(t, dr=0.03)\n",
     "gr.compute()\n",
     "pl.plot(gr.grid, gr.value)\n",
     "pl.xlabel(\"r\")\n",
@@ -349,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c450c01",
+   "id": "857d7827",
    "metadata": {},
    "source": [
     "![](gr_slice.png)\n",
@@ -368,51 +390,48 @@
     "    multiple time origins $t_0$.\n",
     "\n",
     "    The analysis process is now familiar. First we construct the msd\n",
-    "    object and then perform the calculation with `do()`.\n"
+    "    object and then perform the calculation with `compute()`. By\n",
+    "    default, the time grid is linear.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef62479b",
+   "id": "972ef90a",
    "metadata": {},
    "outputs": [],
    "source": [
     "msd = pp.MeanSquareDisplacement(th)\n",
-    "msd.compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74895b3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pl.loglog(msd.grid, msd.value, '-o')\n",
+    "msd.compute()\n",
+    "pl.plot(msd.grid, msd.value, '-o')\n",
     "pl.xlabel(\"t\")\n",
     "pl.ylabel(\"MSD(t)\");"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "20801597",
+   "id": "24f89306",
    "metadata": {},
    "source": [
     "![](msd.png)\n",
     "\n",
     "Again, we can compute partial mean square displacements using the\n",
-    "`Partial` class\n"
+    "`Partial` class. This time we use an expoentially spaced time grid. We\n",
+    "can clearly distinguish the short time balistic regime from the\n",
+    "diffusion one at long times. The intermediate inflection is a signal of\n",
+    "incipient glassy dynamics.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb112de2",
+   "id": "bf291081",
    "metadata": {},
    "outputs": [],
    "source": [
-    "msds = pp.Partial(pp.MeanSquareDisplacement, species=['A','B'], trajectory=th, norigins=100)\n",
+    "import numpy\n",
+    "tgrid = th.timestep * numpy.logspace(0, 5, base=10)\n",
+    "msds = pp.Partial(pp.MeanSquareDisplacement, species=['A','B'], trajectory=th, tgrid=tgrid)\n",
     "msds.compute()\n",
     "pl.loglog(msds.partial['A'].grid, msds.partial['A'].value, '-o', label='A')\n",
     "pl.loglog(msds.partial['B'].grid, msds.partial['B'].value, '-o', label='B')\n",
@@ -423,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dbed8b2",
+   "id": "31fdfe8b",
    "metadata": {},
    "source": [
     "![](msd_ab.png)\n",
@@ -431,32 +450,38 @@
     "Self intermediate scattering function\n",
     "\n",
     "We compute the self part of the intermediate scattering function (ISF)\n",
-    "at specific wave-vectors using a logarithmic time grid.\n"
+    "at specific wave-vectors using a logarithmic time grid. We specify the\n",
+    "norm of the wave-vector we want to use for our calculation (`kgrid`) and\n",
+    "the number of wave-vectors over which the correlation function will be\n",
+    "averaged (`nk`). They are chosen at random in a shell of width `dk`. To\n",
+    "get more info on the parameters passed to compute the ISF, have a look\n",
+    "at the help for the base class with\n",
+    "`help(pp.fourierspace.FourierSpaceCorrelation)`.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a077ba5",
+   "id": "ed590390",
    "metadata": {},
    "outputs": [],
    "source": [
     "from math import pi\n",
     "import numpy\n",
-    "tgrid = numpy.logspace(0, 3, base=10)  # we must include t=0\n",
+    "tgrid = th.timestep * numpy.logspace(0, 5, base=10)\n",
     "isf = pp.Partial(pp.SelfIntermediateScattering, species=[\"A\"], trajectory=th,\n",
-    "                 kgrid=[2*pi, 2.5*pi], nk=1, tgrid=tgrid)\n",
+    "                 kgrid=[pi, 7.0], nk=3, dk=0.1, tgrid=tgrid)\n",
     "isf.do()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "39036064",
+   "id": "bec4eae6",
    "metadata": {},
    "source": [
-    "To get some info on the parameters passed to compute the ISF, have a\n",
-    "look at the help for the base class with\n",
-    "`help(pp.fourierspace.FourierSpaceCorrelation)`\n",
+    "Note that now `grid` is a tuple of lists: the first one is the list of\n",
+    "all the $k$\\'s (the $k$-number grid) while the second is the list of\n",
+    "$t$\\'s (the time grid, which is identical for all wave-vectors).\n",
     "\n",
     "The ISF decays to zero at long times, as it should in an ergodic liquid.\n"
    ]
@@ -464,18 +489,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf96a51",
+   "id": "46b98a95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pl.semilogx(isf.partial['A'].grid[1], isf.partial['A'].value[0], '-o') \n",
+    "isf_A = isf.partial['A']\n",
+    "pl.semilogx(isf_A.grid[1], isf_A.value[0], '-o', label=f'k={isf_A.grid[0][0]:.2f}') \n",
+    "pl.semilogx(isf_A.grid[1], isf_A.value[1], '-o', label=f'k={isf_A.grid[0][1]:.2f}') \n",
+    "pl.legend()\n",
     "pl.xlabel('t')\n",
     "pl.ylabel('ISF')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "78a87a84",
+   "id": "64e76e4e",
    "metadata": {},
    "source": [
     "![](isf.png)\n",
@@ -489,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ddb265",
+   "id": "7f70a132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c76c5fe",
+   "id": "7bcb774f",
    "metadata": {},
    "source": [
     "-   \\`BondAngleDistribution\\`: bond angle distribution\n",
@@ -543,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90c4393c",
+   "id": "8d990f5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3c8695d",
+   "id": "bde0b248",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f6870f",
+   "id": "0181957e",
    "metadata": {},
    "source": [
     "Storing results and analysis\n",
@@ -593,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a0c3ad2",
+   "id": "a4b98e19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62e97ac2",
+   "id": "95421195",
    "metadata": {},
    "source": [
     "The output file path is interpolated using the variable\n",
@@ -614,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38a981c1",
+   "id": "594c1542",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44f3bb63",
+   "id": "0c547cce",
    "metadata": {},
    "source": [
     "To change the output file pattern just modify the string. You can use\n",
@@ -639,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc8064d2",
+   "id": "beffa412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9cb9b42",
+   "id": "c50d74dc",
    "metadata": {},
    "source": [
     "If `analyze()` is called before `compute()`, the above dictionary will\n",
@@ -662,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96b880cc",
+   "id": "e858025a",
    "metadata": {},
    "outputs": [],
    "source": [
