--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "831390e3",
+   "id": "2aecbbe0",
    "metadata": {},
    "source": [
     "Postprocessing with atooms\n",
@@ -26,15 +26,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f4b2a03",
+   "id": "1949a639",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as pl\n",
+    "import atooms.postprocessing as pp\n",
+    "from atooms.trajectory import TrajectoryXYZ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e90b8f50",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib\n",
-    "import matplotlib.pyplot as pl\n",
-    "import atooms.postprocessing as pp\n",
-    "from atooms.trajectory import TrajectoryXYZ \n",
-    "\n",
     "pl.rcParams.update({\n",
     "    \"font.family\": \"serif\",\n",
     "    'font.size': 11.0,\n",
@@ -53,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09823b3f",
+   "id": "c15286b1",
    "metadata": {},
    "source": [
     "We consider a sample trajectory, which can be downloaded from the\n",
@@ -63,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "459eb436",
+   "id": "b4439c12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caf7495a",
+   "id": "60512c1f",
    "metadata": {},
    "source": [
     "### Handling a trajectory\n",
@@ -86,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "095facbe",
+   "id": "1c8606a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb21fe46",
+   "id": "eac93396",
    "metadata": {},
    "source": [
     "The trajectory is a list-like object, in the sense that it can be\n",
@@ -107,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "981af0a3",
+   "id": "a125ab36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c1be7c6",
+   "id": "ae5add84",
    "metadata": {},
    "source": [
     "To know how many frames we have\n"
@@ -125,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfe0ec90",
+   "id": "d7f1c6ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e75b6c0",
+   "id": "677992cc",
    "metadata": {},
    "source": [
     "To clarify: a slice like `th[10: 12]` is a list of frames, not a\n",
@@ -147,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb9a9694",
+   "id": "60321517",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed2e07cb",
+   "id": "742f2131",
    "metadata": {},
    "source": [
     "Analysis of the trajectory\n",
@@ -204,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6e2d37b",
+   "id": "aee1629e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeda92ea",
+   "id": "1dcfddd2",
    "metadata": {},
    "source": [
     "Once the calculation is performed, the radial distribution object `gr`\n",
@@ -237,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8f63668",
+   "id": "8b54cc5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77af5791",
+   "id": "883e047c",
    "metadata": {},
    "source": [
     "![](gr.png)\n",
@@ -262,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bcb5970",
+   "id": "7b1a8b2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b25bb205",
+   "id": "14aa9a4b",
    "metadata": {},
    "source": [
     "As we can see, the correlation function displays two narrow peaks around\n",
@@ -288,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "064b7103",
+   "id": "006546e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36c30af3",
+   "id": "0bd85383",
    "metadata": {},
    "source": [
     "Note how we modified the bin width `dr` for the $B$-$B$ correlations to\n",
@@ -311,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e0e44b5",
+   "id": "a3cdf740",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ea8bff",
+   "id": "4079333f",
    "metadata": {},
    "source": [
     "We plot all correlation functions\n"
@@ -330,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f911655",
+   "id": "539a80e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed9f68a6",
+   "id": "94a69239",
    "metadata": {},
    "source": [
     "![](gr_ab.png)\n",
@@ -356,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3762fb56",
+   "id": "f513e9f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8ba5878",
+   "id": "2bf43a8a",
    "metadata": {},
    "source": [
     "![](gr_slice.png)\n",
@@ -397,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85c0b3ca",
+   "id": "c9524192",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41ec2e04",
+   "id": "b113ac42",
    "metadata": {},
    "source": [
     "![](msd.png)\n",
@@ -425,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed9229ec",
+   "id": "f0625459",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96e7af88",
+   "id": "4ce23085",
    "metadata": {},
    "source": [
     "![](msd_ab.png)\n",
@@ -462,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd9a357a",
+   "id": "79acdfe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "590e1383",
+   "id": "6d6db667",
    "metadata": {},
    "source": [
     "Note that now `grid` is a tuple of lists: the first one is the list of\n",
@@ -489,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2352eee",
+   "id": "2f8a2c59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33cf5b96",
+   "id": "8cddc9c4",
    "metadata": {},
    "source": [
     "![](isf.png)\n",
@@ -517,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a9f2275",
+   "id": "5bd66676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74667d15",
+   "id": "b803b47b",
    "metadata": {},
    "source": [
     "-   \\`BondAngleDistribution\\`: bond angle distribution\n",
@@ -571,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c994e02",
+   "id": "35d97f67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "767fdee8",
+   "id": "daef4853",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dea05225",
+   "id": "988d34d8",
    "metadata": {},
    "source": [
     "Storing results and analysis\n",
@@ -621,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd58f2b7",
+   "id": "3da3ced0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42fd3c3a",
+   "id": "6ae3ee8b",
    "metadata": {},
    "source": [
     "The output file path is interpolated using the variable\n",
@@ -642,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58c1da38",
+   "id": "74300635",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c5576fb",
+   "id": "357464c4",
    "metadata": {},
    "source": [
     "To change the output file pattern just modify the string. You can use\n",
@@ -667,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e13e5e2d",
+   "id": "296f2a5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d6a6601",
+   "id": "22ed4f9a",
    "metadata": {},
    "source": [
     "If `analyze()` is called before `compute()`, the above dictionary will\n",
@@ -690,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30a5d155",
+   "id": "aea27a69",
    "metadata": {},
    "outputs": [],
    "source": [
