--- a/docs/index.org
+++ b/docs/index.org
@@ -15,11 +15,13 @@ In this tutorial, we are going to show how to perform standard analysis of molec
 
 We start with a few imports and plot customizations. We will read a trajectory file in XYZ format, so we also load the =TrajectoryXYZ= class from =atooms=.
 #+begin_src python :results none
-import matplotlib
 import matplotlib.pyplot as pl
 import atooms.postprocessing as pp
 from atooms.trajectory import TrajectoryXYZ 
+#+end_src
 
+#+begin_src python :results none :exports none
+import matplotlib
 pl.rcParams.update({
     "font.family": "serif",
     'font.size': 11.0,
@@ -274,7 +276,7 @@ pl.ylabel('ISF')
 
 *** More correlation functions
 Here is the full list of correlation functions currently available in =postprocessing=, along with the corresponding classes:
-#+begin_src python :export results
+#+begin_src python :exports results
 import inspect
 import atooms.postprocessing as pp
 for cls in inspect.getmembers(pp, inspect.isclass):    
